// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppBarTitle should render correctly (with snapshots) 1`] = `
<div>
  <h6
    class="rmd-app-bar__title rmd-app-bar__title--no-wrap"
  >
    Title
  </h6>
</div>
`;

exports[`AppBarTitle should render correctly (with snapshots) 2`] = `
<div>
  <h6
    class="rmd-app-bar__title rmd-app-bar__title--no-wrap rmd-app-bar__title--keyline"
  >
    Title
  </h6>
</div>
`;

exports[`AppBarTitle should render correctly (with snapshots) 3`] = `
<div>
  <h6
    class="rmd-app-bar__title rmd-app-bar__title--no-wrap rmd-app-bar__title--keyline rmd-app-bar__title--inherit"
  >
    Title
  </h6>
</div>
`;
